<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Bluetooth Reader</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    
    <string name="EnrolID">Enrol ID</string>
    <string name="Verify">Verify ID</string>
    <string name="Identify">Search</string>
    <string name="DeleteID">Delete ID</string>
    <string name="ClearID">Clear</string>
    <string name="EnrolHost">Enrol Template</string>
    <string name="CaptureHost">Capture Template</string>
    <string name="Match">Match Template</string>
    <string name="WriteCard">Write Card</string>
    <string name="ReadCard">Read Card</string>
    <string name="CardID">Card SN Match</string>
    <string name="CardFinger">FingeprintCard Match</string>
    <string name="CardSn">Read Card SN</string>
    
    <string name="PrintText">Print Text</string>
    <string name="PrintBarcode">Print Barcode</string>
    
    <string name="getdevsn">Device SN</string>
    <string name="getbat">Battery Value</string>
    <string name="getimage">Get Image</string>
    <string name="getdata">Get Data</string>
    
</resources>
